# homework13

./: main.py  pyproject.toml
src/config/: config.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
